# django-template

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: backend.yml  codacy.yml  codeql.yml  docker-publish.yml
apps/core/: fields.py  models.py
apps/users/: admin.py  apps.py  models.py
apps/users/migrations/: 0001_initial.py
config/: .example.env
docker/django/: Dockerfile  entrypoint.sh  gunicorn.sh  gunicorn_config.py
docker/nginx/: nginx.conf
docker/postgres/: Dockerfile
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
server/: asgi.py  urls.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  common.py  csp.py  logging.py
server/settings/environments/: dev.py  test.py
tests/: test_smoke.py
